--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: pages-themes/architect@v0.2.0
+remote_theme: chrisrhymes/bulma-clean-theme
 plugins:
 - jekyll-remote-theme # 
 title: Software Interview Questions
